# TSU_NLP

./: .gitignore  Lab_1.py  Lab_2.py  Lab_4.py  University.txt  pyproject.toml
